# capitalist_robot

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs  test.rs  utils.rs
src/robot/: mod.rs  robot_impl.rs
src/robot/modes/: follow_street.rs  mod.rs  scan_bank.rs  scan_content.rs  searching_bank.rs  searching_content.rs
