[package]
name = "capitalist_robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv= "0.15.0"
robotics_lib = { version = "0.1.21", registry = "kellnr"}
charting_tools = { version = "1.0.4", registry = "kellnr"}
recycle_by_ifrustrati = {version = "0.1.1", registry = "kellnr"}
rip_worldgenerator = { version = "0.5.44", registry = "kellnr"}
rand= "0.8.5"
pmp_collect_all = {version= "0.1.1", registry = "kellnr"}
rust_and_furious_dynamo = {version= "0.1.2", registry = "kellnr"}
crossterm= "0.27.0"
rustici_planner = {version= "0.1.1", registry = "kellnr"}
op_map = {version = "1.0.0", registry = "kellnr"}
shared_state = { git = "ssh://git@github.com/RustyKrab-AP2023/shared_state.git", branch= "sync"}
